--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "author": "Luis Del Gallego",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.14.2",
     "express": "^4.13.4",
+    "jsonwebtoken": "^5.7.0",
+    "mongoose": "^4.4.4",
     "morgan": "^1.6.1",
     "socket.io": "^1.4.5"
   }
