--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Luis Del Gallego",
   "license": "ISC",
   "dependencies": {
+    "angular-material": "^1.0.6",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.14.2",
     "express": "^4.13.4",
@@ -16,5 +17,12 @@
     "mongoose": "^4.4.4",
     "morgan": "^1.6.1",
     "socket.io": "^1.4.5"
+  },
+  "devDependencies": {
+    "angular": "^1.5.0",
+    "angular-animate": "^1.5.0",
+    "angular-aria": "^1.5.0",
+    "angular-material": "^1.0.6",
+    "angular-messages": "^1.5.0"
   }
 }
